注册接口验证短信验证码
    添加发送短信验证码接口的文档
