# src/eternal/controller/account/account.go
@@ -4,11 +4,13 @@ import (
 	"eternal/controller/context"
 	"eternal/errors"
 	accountModel "eternal/model/account"
+	smsModel "eternal/model/sms"
 	"github.com/gorilla/sessions"
 	"github.com/labstack/echo"
 	"github.com/labstack/echo-contrib/session"
 	log "github.com/sirupsen/logrus"
 	"net/http"
+	"time"
 )
 
 /* 获取当前支持的国家 */
@@ -42,11 +44,13 @@ func Login(c echo.Context) error {
 	data := LoginRequest{}
 	if err := ctx.Bind(&data); err != nil {
 		return err
+	} else if err := ctx.Validate(&data); err != nil {
+		return err
 	}
-	mobile := data.Mobile
+	phoneNumber := data.PhoneNumber
 	password := data.Password
 
-	a, err := accountModel.GetAccountWithMobile(mobile)
+	a, err := accountModel.GetAccountWithPhoneNumber(phoneNumber)
 	if err != nil {
 		return err
 	} else if a == nil { /* 用户不存在 */
@@ -55,7 +59,7 @@ func Login(c echo.Context) error {
 	if !a.Auth(password) { /* 密码错误 */
 		return errors.ErrUserPasswordInvalid
 	}
-	log.Debugf("User %s logged in", mobile)
+	log.Debugf("User %s logged in", phoneNumber)
 
 	return login(ctx, a)
 }
@@ -79,15 +83,14 @@ func Signup(c echo.Context) error {
 	data := SignupRequest{}
 	if err := ctx.Bind(&data); err != nil {
 		return err
+	} else if err := ctx.Validate(&data); err != nil {
+		return err
 	}
 	countryCode := data.CountryCode
-	mobile := data.Mobile
+	phoneNumber := data.PhoneNumber
 	password := data.Password
 	code := data.Code
 
-	if code != "123456" {
-		return errors.ErrUseSMSCodeInvalid
-	}
 	if len(password) <= 4 || len(password) >= 12 {
 		return errors.ErrUserPasswordLengthInvalid
 	}
@@ -99,7 +102,14 @@ func Signup(c echo.Context) error {
 		return errors.ErrCountryCodeInvalid
 	}
 
-	a, err := accountModel.CreateAccount(countryCode, mobile, password, accountModel.PTYPE_MD5)
+	/* 验证短信验证码，CheckSMSCode方法会设置验证码为已使用 */
+	if ok, err := smsModel.CheckSMSCode(phoneNumber, smsModel.CodeTypeSignup, code, time.Minute*20); err != nil {
+		return err
+	} else if !ok {
+		return errors.ErrUseSMSCodeInvalid
+	}
+
+	a, err := accountModel.CreateAccount(countryCode, phoneNumber, password, accountModel.PTYPE_MD5)
 	if err != nil {
 		return err
 	}
